bk_ida/gobmkida/c2/recognize_eye
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/recognize_eye/src/engine/optics.c:1771:44: error: use of undeclared identifier 'xmmword_496A30'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_496A30); 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/recognize_eye/src/engine/optics.c:1822:10: error: use of undeclared identifier 'eyevalue'
*v98 = ( eyevalue)v49; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/recognize_eye/src/engine/optics.c:1946:15: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( double *)v7.m128i_i64, 
            ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/recognize_eye/src/engine/optics.c:1947:15: error: member reference base type '__m128' (vector of 4 'float' values) is not a structure or union
*( double *)v8.m128_u64, 
            ~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/recognize_eye/src/engine/optics.c:1948:18: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( double *)si128.m128i_i64); 
            ~~~~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/recognize_eye/src/engine/optics.c:1979:1: error: use of undeclared identifier 'byte_A4004F'
byte_A4004F[v42] = 1; 
^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/recognize_eye/src/obj/1/optics.o] Error 1
